# mbed

./: .gitignore  README.md  justfile  pyproject.toml
examples/winnie_the_pooh/: .gitignore  README.md
src/mbed/: __init__.py  file_tracker.py  file_tracking.py  index_manager.py  indexer.py  loaders.py  metadata.py  searcher.py  utils.py
src/mbed/cli/: __init__.py  _cli.py  cli.py  commands.py  setup.py
src/mbed/cli/commands/: __init__.py  init.py  search.py  status.py  update.py
src/mbed/ops/: __init__.py  create_index.py  search_directory.py  update.py
tests/: conftest.py  test_cli_integration.py  test_file_tracker.py  test_file_tracking.py  test_index_manager.py
